  because most people enter the game in age order, but was broken for an Eve
  that entered later than a baby (she would capture mouse clicks of the baby
  she was standing visually behind).

--TEMP LOGIN was a confusing feature.  Added CLEAR ACCOUNT button instead.

--Twin system.  Players can share a code friends and get born as identical
  twins, triplets, or quadruplets.





Server Fixes

--Server logs curses cast and curse score changes.  These logs are backed up
  along with lifeLogs.

--Web export of curse logs along with life logs.

--Curse system saves state between runs of given server.  Thus, cursed status
  isn't reset when server restarts (no more free pass to griefers right before
  an update).




Version 123    2018-July-10

--Fixed memory leak and uninitialized variable.

--Fixed bad memory access in audio callback when shutting down.

--Fixed memory leak in update process.




Windows base update:   Version 65c    2018-July-10

--Fixed slow newline replacement code (as part of update process) that was 
  getting bogged down when processing text files with many lines.




Server Fixes

--Anyone can name a held baby, even adoptive parents.  They get the last name
  of their adoptive parent.  An unnamed person who is older than baby age can
  be named by anyone nearby, but they will never have a last name.

--If a name isn't unique as far as the curse system is concerned, a roman
  numeral suffix (II, III, IV, V, etc.) is automatically added.

--Data-only diff bundle generation script now skips scenes.  They never should
  have been included, and the tutorial map scene was BIG (26,000 lines).




Version 122    2018-July-6

--Back to updating hard-coded version number with every client update.  Not
  sure what I was thinking there.  Saw a version mismatched and found the
  wrong reason for it.




Version 121    2018-July-6

--Fixed newly introduced bug in sound volumes for positioned sound source when